# salt-api-old

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  conftest.py  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  proposal_code.py  pyproject.toml  tox.ini  web_server.py
.github/workflows/: main.yml
about/: index.html
auth/: login.py
database/: sdb_connection.py  user_queries.py
docs/: about.md  index.md
saltapi/: __init__.py  app.py  routes.py  schema.graphql
saltapi/auth/: __init__.py  authorization.py  login.py  roles.py  token.py
saltapi/authenticate/: __init__.py
saltapi/database/: sdb_connection.py  user_queries.py
saltapi/graphql/: __init__.py  directives.py  resolvers.py  scalars.py  schema.graphql
saltapi/repository/: __init__.py  database.py  logging_errors.py  proposa_repository.py  proposal_repository.py  submission_repository.py  user_repository.py
saltapi/submission/: __init__.py  resolvers.py  submit.py
saltapi/util/: __init__.py  error.py
search/: search_index.json
tests/: __init__.py  test_authentication.py  test_proposal_code.py  test_saltapi.py  test_scalars.py  test_submit.py
