[tool.poetry]
name = "saltapi"
version = "0.1.0"
description = ""
authors = ["Christian Hettlage <hettlage@saao.ac.za>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13"
ariadne = "^0.12.0"
uvicorn = "^0.12.2"
starlette-jwt = "^0.1.9"
pandas = "^1.1.4"
python-dateutil = "^2.8.1"
aiomysql = "^0.0.20"
boolean = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
