[tool.poetry]
name = "saltapi"
version = "0.1.0"
description = ""
authors = ["Christian Hettlage <hettlage@saao.ac.za>"]

[tool.poetry.dependencies]
python = "^3.8"
ariadne = "^0.12.0"
starlette = "^0.13.0"
python-dateutil = "^2.8.1"
pre-commit = "^2.8.2"
databases = "^0.4.1"
pydantic = "^1.7.2"
PyJWT = "^1.7.1"
python-dotenv = "^0.15.0"
aiomysql = "^0.0.20"
httpx = "^0.16.1"
uvicorn = {extras = ["standard"], version = "^0.12.3"}
pytz = "^2020.4"
python-multipart = "^0.0.5"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.5"
pytest-asyncio = "^0.14.0"
pytest-httpx = "^0.10.0"
requests = "^2.25.0"
flake8-print = "^3.1.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
